# opaque-ke

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  JS_CLARIFICATIONS.md  Plan.md  README.md  clippy.toml  deny.toml  taplo.toml
.cargo/: license.rs
.github/workflows/: main.yml  publish.yml  python-ci.yml
benches/: opaque.rs  oprf.rs
docs/: python.md
examples/: .simple_login.rs.swp  custom_ksf.rs  digital_locker.rs  simple_login.rs  test_vector_generation.rs
opaque-derive/: Cargo.toml
opaque-derive/src/: lib.rs
opaque-ke/: Cargo.toml
opaque-ke/benches/: oprf.rs
opaque-ke/src/: keypair.rs  map_to_curve.rs  opaque.rs  slow_hash.rs
opaque-ke/src/tests/: mod.rs  opaque_ke_test.rs  serialization.rs
python/opaque_ke_py/: README.md
python/opaque_ke_py/src/: errors.rs  login.rs  registration.rs  suite.rs  types.rs
python/opaque_ke_py/tests/: test_errors.py  test_js_interop.py  test_roundtrip.py  test_serialization.py
python/opaque_ke_py/tests/js/: README.md  package.json
scripts/: digital_locker.exp  simple_login.exp
src/: ake.rs  ciphersuite.rs  envelope.rs  errors.rs  group.rs  hash.rs  impls.rs  indexed_state.rs  key_exchange.rs  key_exchange_traits.rs  keypair.rs  ksf.rs  lib.rs  map_to_curve.rs  messages.rs  opaque.rs  oprf.rs  rkr_encryption.rs  serialization.rs  slow_hash.rs  test_vectors.rs  util.rs
src/elligator/: field.rs  mod.rs
src/group/: expand.rs  mod.rs  p256.rs  ristretto.rs  x25519.rs
src/key_exchange/: mod.rs  shared.rs  sigma_i.rs  traits.rs  tripledh.rs  tripledh_kem.rs
src/key_exchange/group/: curve25519.rs  ecdsa.rs  ed25519.rs  eddsa.rs  elliptic_curve.rs  mod.rs  p256.rs  ristretto255.rs  x25519.rs
src/key_exchange/sigma_i/: ecdsa.rs  hash_eddsa.rs  message.rs  mod.rs  pure_eddsa.rs  shared.rs
src/noise/: mod.rs  noise_utils.rs
src/serialization/: mod.rs  tests.rs
src/tests/: full_test.rs  full_test_vectors.rs  mock_rng.rs  mod.rs  opaque_ke_test.rs  opaque_test_vectors.rs  opaque_vectors.rs  parser.rs  remote_key.rs  rfc9807_vectors.rs  serialization.rs  test_opaque_vectors.rs  voprf_test_vectors.rs
tests/: migration.rs  remote_key.rs
