[package]
authors = ["Kevin Lewi <klewi@fb.com>", "François Garillot <fga@fb.com>"]
categories = ["no-std"]
description = "An implementation of the OPAQUE password-authenticated key exchange protocol"
edition = "2021"
keywords = ["cryptography", "crypto", "opaque", "passwords", "authentication"]
license = "MIT"
name = "opaque-ke"
readme = "README.md"
repository = "https://github.com/novifinancial/opaque-ke"
rust-version = "1.65"
version = "1.2.0"

[features]
bench = []
default = ["u64_backend"]
slow-hash = ["scrypt"]
std = ["curve25519-dalek/std", "getrandom", "rand/std", "rand/std_rng"]
u32_backend = ["curve25519-dalek/u32_backend"]
u64_backend = ["curve25519-dalek/u64_backend"]

[dependencies]
constant_time_eq = "0.1"
curve25519-dalek = { version = "3", default-features = false }
digest = "0.9"
displaydoc = { version = "0.2", default-features = false }
generic-array = "0.14"
getrandom = { version = "0.2", optional = true }
hkdf = "0.11"
hmac = "0.11"
rand = { version = "0.8", default-features = false }
scrypt = { version = "0.5", default-features = false, optional = true }
subtle = { version = "2.3", default-features = false }
zeroize = { version = "1", features = ["zeroize_derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
anyhow = "1"
base64 = "0.13"
chacha20poly1305 = "0.8"
criterion = "0.3"
hex = "0.4"
lazy_static = "1"
opaque-ke = { path = "", default-features = false, features = ["std"] }
proptest = "1"
rustyline = "8"
serde_json = "1"
sha2 = "0.9"

[[bench]]
harness = false
name = "oprf"
required-features = ["bench"]
