[package]
name = "opaque-ke"
version = "0.1.0"
repository = "https://github.com/novifinancial/opaque-ke"
keywords = ["cryptography", "crypto", "opaque", "passwords", "authentication"]
description = "An implementation of the OPAQUE password-authenticated key exchange protocol"
authors = ["Kevin Lewi <klewi@fb.com>", "François Garillot <fga@fb.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"

[features]
default = ["u64_backend"]
slow-hash = ["scrypt"]
bench = []
u64_backend = ["curve25519-dalek/u64_backend", "x25519-dalek/u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend", "x25519-dalek/u32_backend"]

[dependencies]
curve25519-dalek = { version = "2.1.0", default-features = false, features = ["std"]}
displaydoc = "0.1.7"
generic-array = "0.14.3"
hkdf = "0.9.0"
hmac = "0.8.1"
rand_core = "0.5.1"
scrypt = { version = "0.3.1", optional = true }
sha2 = "0.9.1"
thiserror = "1.0.20"
x25519-dalek = { version = "0.6.0", default-features = false, features = ["std"]}
zeroize = "1.1"
opaque-derive = { path = "../opaque-derive/", version = "0.1.0"}

[dev-dependencies]
base64 = "0.12.3"
criterion = "0.3.3"
hex = "0.4.2"
lazy_static = "1.4.0"
serde_json = "1.0.56"
proptest = "0.10.0"
rand = "0.7"

[[bench]]
name = "oprf"
harness = false
required-features = ["bench"]
